--- a/templates/data.html
+++ b/templates/data.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
  
 {% block content %}
-    <h1 class="ui center aligned header">TODO LIST</h1>
+<button type="button" class="btn btn-dark" id="whatsapp"><a  href="/todos" style="text-decoration: none;">Home Page</a></button>
+
+
+<button type="button" class="btn btn-success" id="exportexcel">EXPORT CSV</button>
+
+    <h1 class="ui center aligned header">To-Do List</h1>
   <form class="ui form" action="/add" method="post">
     <div class="field">
         <label>To-Do Title</label>
