--- a/templates/login.html
+++ b/templates/login.html
@@ -24,8 +24,9 @@
                 <label>Greeting Message</label>
                 <input type="text" name="password" placeholder="Password**.."><br>
             </div>
-            <button class="ui blue button" type="submit">Login Here</button>
-			<button type="button" class="btn btn-warning" id="singup"><a  href="/signup" style="text-decoration: none;">Create Account Here</a></button>
+            <button type="button" class="btn btn-warning" id="singup"><a  href="/signup" style="text-decoration: none;">Login Admin</a></button>
+			<button class="ui blue button" type="submit">Login Here</button>
+            <button type="button" class="btn btn-warning" id="singup"><a  href="/signup" style="text-decoration: none;">Create Account Here</a></button>
         </form>
 </div>
 </body>
